[gd_scene load_steps=40 format=3 uid="uid://de40i1ga5235w"]

[ext_resource type="Texture2D" uid="uid://dss4746au5gax" path="res://Assets/Players/Hooded.png" id="1_kelma"]
[ext_resource type="Script" uid="uid://rvjyk781nx5x" path="res://Scene/player.gd" id="1_y8w33"]
[ext_resource type="PackedScene" uid="uid://bpvysj6hgrs6r" path="res://Scene/Weapons/fazhang.tscn" id="3_xa75v"]
[ext_resource type="Texture2D" uid="uid://b3ethlgso4lr6" path="res://Assets/Players/Dust.png" id="4_58ae2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8jg3e"]
atlas = ExtResource("4_58ae2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xvy4"]
atlas = ExtResource("4_58ae2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b881n"]
atlas = ExtResource("4_58ae2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gnqs"]
atlas = ExtResource("4_58ae2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1eh6"]
atlas = ExtResource("4_58ae2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddib3"]
atlas = ExtResource("4_58ae2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_h2j5n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jg3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xvy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b881n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gnqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1eh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddib3")
}],
"loop": true,
"name": &"dash_dust",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lhccw"]
atlas = ExtResource("1_kelma")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7d6xm"]
atlas = ExtResource("1_kelma")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sr8w"]
atlas = ExtResource("1_kelma")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vqkc"]
atlas = ExtResource("1_kelma")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uktg4"]
atlas = ExtResource("1_kelma")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jx4b7"]
atlas = ExtResource("1_kelma")
region = Rect2(160, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2mxbm"]
atlas = ExtResource("1_kelma")
region = Rect2(192, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wfp4b"]
atlas = ExtResource("1_kelma")
region = Rect2(224, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c31lq"]
atlas = ExtResource("1_kelma")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dof7"]
atlas = ExtResource("1_kelma")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ao7i"]
atlas = ExtResource("1_kelma")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sypm"]
atlas = ExtResource("1_kelma")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fn0wv"]
atlas = ExtResource("1_kelma")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eqmt2"]
atlas = ExtResource("1_kelma")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c40dt"]
atlas = ExtResource("1_kelma")
region = Rect2(192, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgjog"]
atlas = ExtResource("1_kelma")
region = Rect2(224, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8w33"]
atlas = ExtResource("1_kelma")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xa75v"]
atlas = ExtResource("1_kelma")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kelma"]
atlas = ExtResource("1_kelma")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_58ae2"]
atlas = ExtResource("1_kelma")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ivevv"]
atlas = ExtResource("1_kelma")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6jsd"]
atlas = ExtResource("1_kelma")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6qlh"]
atlas = ExtResource("1_kelma")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2sw5t"]
atlas = ExtResource("1_kelma")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ij4jb"]
atlas = ExtResource("1_kelma")
region = Rect2(192, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c68nv"]
atlas = ExtResource("1_kelma")
region = Rect2(224, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_58ae2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhccw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d6xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sr8w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vqkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uktg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jx4b7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mxbm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wfp4b")
}],
"loop": false,
"name": &"attack",
"speed": 30.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c31lq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dof7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ao7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sypm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fn0wv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eqmt2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c40dt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgjog")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8w33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa75v")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kelma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58ae2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ivevv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6jsd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6qlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2sw5t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ij4jb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c68nv")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ivevv"]
radius = 11.6857

[node name="Player" type="CharacterBody2D"]
scale = Vector2(3, 3)
collision_mask = 8
motion_mode = 1
script = ExtResource("1_y8w33")
weapon_scene = ExtResource("3_xa75v")

[node name="DustSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 6.33333)
scale = Vector2(1, 0.604167)
sprite_frames = SubResource("SpriteFrames_h2j5n")
animation = &"dash_dust"
autoplay = "dash_dust"
frame_progress = 0.537925

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_58ae2")
animation = &"attack"
autoplay = "idle"
frame = 7
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("CircleShape2D_ivevv")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="DashCDTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="WeaponSocket" type="Node2D" parent="."]
